# SearchForWord

./: .clang-format  CMakeLists.txt  README.md
Resource/: text.txt
inc/: AndQuery.h  BinaryQuery.h  NotQuery.h  OrQuery.h  Query.h  QueryResult.h  Query_base.h  TextQuery.h  WordQuery.h
src/: CMakeLists.txt  main.cpp
src/AndQuery/: AndQuery.cpp  CMakeLists.txt
src/BinaryQuery/: CMakeLists.txt
src/NotQuery/: CMakeLists.txt  NotQuery.cpp
src/OrQuery/: CMakeLists.txt  OrQuery.cpp
src/Query/: CMakeLists.txt
src/QueryResult/: CMakeLists.txt  QueryResult.cpp
src/Query_base/: CMakeLists.txt
src/TextQuery/: CMakeLists.txt  TextQuery.cpp
src/WordQuery/: CMakeLists.txt
